// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fd Event should render event type correctly 1`] = `
<span
  className="sc-bdVaJa iJIZEq"
>
  <span
    className="event-type"
  >
    click
     
  </span>
  <span
    className="event-target"
  >
    h:
    document.body
     
  </span>
</span>
`;

exports[`Fd Event should render event type with value correctly 1`] = `
<span
  className="sc-bdVaJa iJIZEq"
>
  <span
    className="event-type"
  >
    contains-text
     
  </span>
  <span
    className="event-value"
  >
    contains this text
     
  </span>
  <span
    className="event-target"
  >
    h:
    document.body
     
  </span>
</span>
`;
